[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vox"
version = "0.1.0"
description = "Natural language to shell command translator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
vox = "vox.cli:main"
